# play-flask

./: Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  nginx-default.conf  openapi.yaml  pyproject.toml
app/: app.py
app/resources/: helloworld.py
tests/resources/: test_helloworld.py
